--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,368 @@
-.App {
-  text-align: center;
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+  font-size: 10px;
+  font-family: "Montserrat", sans-serif, Arial;
+  font-style: normal;
+  -webkit-tap-highlight-color: transparent;
+  font-weight: 300;
+  background-color: #FFFFFF;
+  padding-bottom: 2rem;
+  width: 100%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (max-width: 1024px) {
+  html {
+    font-size: 2.66667vmin;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+@media (min-width: 1024px) {
+  ::-webkit-scrollbar {
+    margin: 10px;
+  }
+  ::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+    background-color: rgba(0, 0, 0, 0.2);
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color: #7F7F7F;
+    border-radius: 2px;
+  }
+}
+.mainWrapper {
+  width: 100%;
+}
+
+.container {
+  max-width: 76rem;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.section {
+  padding: 0 1.6rem;
+}
+
+.banner {
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  padding: 3rem;
+  position: relative;
+  text-align: center;
+  height: 100vh;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url("assets/images/bannerMobile.jpg");
+  background-attachment: fixed;
+  background-position: top;
+}
+@media (max-width: 1024px) {
+  .banner {
+    /*background-image: url("assets/images/bannerMobile.jpg");*/
+    padding: 1.6rem;
+  }
+}
+.banner:after {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.bannerInfo {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 1.8rem;
+  color: #ffffff;
+  position: relative;
+  z-index: 10;
+}
+
+.bannerText {
+  font-size: 2.2rem;
+  line-height: 3rem;
+  font-weight: 100;
+}
+@media (max-width: 1024px) {
+  .bannerText {
+    font-size: 1.8rem;
+    line-height: 2.2rem;
+  }
+}
+.bannerText.bold {
+  font-weight: bold;
+}
+
+.countDownRow {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 5.5rem;
+  width: 100%;
+}
+@media (max-width: 1024px) {
+  .countDownRow {
+    gap: 3rem;
+  }
 }
 
-.App-link {
-  color: #61dafb;
+.countDown {
+  display: flex;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.countDownColumn {
+  flex: 0 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  min-width: 15rem;
+}
+@media (max-width: 1024px) {
+  .countDownColumn {
+    min-width: 6rem;
   }
-  to {
-    transform: rotate(360deg);
+}
+.countDownColumn:not(:last-child) {
+  border-right: 0.1rem solid rgba(255, 255, 255, 0.2);
+  padding-right: 3rem;
+  margin-right: 3rem;
+}
+@media (max-width: 1024px) {
+  .countDownColumn:not(:last-child) {
+    padding-right: 1rem;
+    margin-right: 1rem;
   }
+}
+
+.countDownNumber {
+  font-weight: bold;
+  font-size: 6.4rem;
+  line-height: 7.8rem;
+}
+@media (max-width: 1024px) {
+  .countDownNumber {
+    font-size: 2.4rem;
+    line-height: 2.8rem;
+  }
+}
+
+.countDownText {
+  font-size: 1.4rem;
+  line-height: 1.8rem;
+  text-transform: capitalize;
+}
+@media (max-width: 1024px) {
+  .countDownText {
+    font-size: 1.2rem;
+    line-height: 1.6rem;
+  }
+}
+
+.dayPlan {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  color: #000000;
+  gap: 9rem;
+  padding-top: 7.5rem;
+  padding-bottom: 6rem;
+}
+
+.dayPlanHead {
+  font-size: 4.2rem;
+  line-height: 4.8rem;
+  text-align: center;
+}
+
+.dayPlanInner {
+  flex: 0 0 auto;
+  display: flex;
+  align-items: center;
+  gap: 4rem;
+  max-width: 100%;
+}
+@media (max-width: 1024px) {
+  .dayPlanInner {
+    gap: 3rem;
+  }
+}
+
+.dayPlanColumn {
+  display: flex;
+  flex-direction: column;
+  gap: 7rem;
+}
+
+.dayPlanRowColumn {
+  display: flex;
+  align-items: center;
+  gap: 4rem;
+}
+.dayPlanRowColumn:not(:last-child) .dayPlanImgHolder {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+.dayPlanRowColumn:not(:last-child) .dayPlanImgHolder:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 100%;
+  margin: 0 auto;
+  display: block;
+  height: 7rem;
+  width: 0.2rem;
+  background-color: #000000;
+}
+@media (max-width: 1024px) {
+  .dayPlanRowColumn {
+    flex-direction: column;
+    position: relative;
+  }
+}
+
+.dayPlanTime {
+  font-size: 2.4rem;
+  line-height: 2.8rem;
+  width: 6rem;
+  text-align: center;
+  font-weight: bold;
+}
+@media (max-width: 1024px) {
+  .dayPlanTime {
+    position: absolute;
+    left: calc(100% + 3rem);
+    top: -3rem;
+    font-size: 2rem;
+    line-height: 2.4rem;
+  }
+}
+
+.dayPlanInfo {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  flex: 1;
+  min-width: 0;
+}
+@media (max-width: 1024px) {
+  .dayPlanInfo {
+    padding-top: 3rem;
+  }
+}
+
+.dayPlanImgHolder {
+  flex: 0 0 auto;
+  width: 8.4rem;
+}
+
+.dayPlanImg {
+  display: block;
+  width: 100%;
+  object-fit: contain;
+}
+
+.dayPlanTitle {
+  font-size: 2.6rem;
+  line-height: 3rem;
+  font-weight: bold;
+}
+.dayPlanTitle.hasMargin {
+  margin: 4rem 0;
+  text-align: center;
+}
+@media (max-width: 1024px) {
+  .dayPlanTitle {
+    font-size: 2rem;
+    line-height: 2.4rem;
+  }
+}
+
+.dayPlanDesc {
+  font-size: 1.6rem;
+  line-height: 2rem;
+}
+
+.locationRow,
+.addressRow {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2.5rem;
+  text-align: center;
+}
+
+.locationName {
+  font-size: 1.6rem;
+  letter-spacing: 0.25rem;
+  text-transform: uppercase;
+}
+
+.locationImg {
+  display: block;
+  object-fit: contain;
+  width: 100%;
+}
+
+.locationAndAddress {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20rem;
+  width: 100%;
+}
+@media (max-width: 1024px) {
+  .locationAndAddress {
+    gap: 10rem;
+  }
+}
+
+.locationAndAddressRow {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 4.5rem;
+  width: 100%;
+}
+
+.addressText {
+  font-size: 1.8rem;
+  line-height: 2.2rem;
+}
+
+.mapHolder {
+  padding-bottom: 50%;
+  width: 100%;
+  position: relative;
+}
+@media (max-width: 1024px) {
+  .mapHolder {
+    padding-bottom: 100%;
+  }
+}
+
+.map {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
